Fix logo overflow on small screens

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -47,7 +47,7 @@
 
 @media screen and (max-width: 768px) {
     .main-logo {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 250px;
     }
 }
